--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/aueangpanit/LISiT#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
-    "nodemon": "^1.18.2"
+    "mongoose": "^5.2.4",
+    "nodemon": "^1.18.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
