--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "mongoose": "^5.2.4",
     "nodemon": "^1.18.2",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
-    "passport-local": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0"
   }
 }
