--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.4",
+    "multer": "^1.3.1",
+    "multer-s3": "^2.7.0",
     "nodemon": "^1.18.2",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
