--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "express": "^4.16.3",
     "mongoose": "^5.2.4",
     "multer": "^1.3.1",
-    "multer-s3": "^2.7.0",
+    "multer-s3-transform": "^2.3.2",
     "nodemon": "^1.18.2",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "sharp": "^0.20.5"
   }
 }
